# 2024-m1-kinetic

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  L.off  L_with_TUBE.off  L_with_tube_maille.off  README.md  cube3.off  l_with_trou.ply  l_with_trou2.off  l_with_trou3.ply  out.ply  presentation.aux  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.tex  presentation.toc  report.bib  report.tex
.github/workflows/: workflow.yml
Kinetic_exemple/ACJasmin/: mesh.stl
bibliography/v0/: report_bib.bib
bibliography/v1/: report_bib.bib
bibliography/vfinal/: report_bib.bib
cmake/: Conan.cmake
data/: mesh_ThreeZones.stl  mesh_ThreeZones.stl.xyz
data/Simple/Cottage/: Cottage_cut.ply
gmsh/: cube3.geo  cube3.stl
presentation and report/bibliography/v0/: report_bib.bib
presentation and report/presentation/v2/: presentation.tex
presentation and report/report/vfinal/: report.tex
presentation and report/reunion/: cr_13_03_2024
presentation/v0/: presentation.tex
presentation/v2/: presentation.tex
prises_de_notes/: notes.txt
report v1/: report_axel.tex  report_dorian.tex
report/v0/: report.tex
report/v1/: report.tex
report/vfinal/: report.tex
result/: polylist_0.500000_.off  polylist_0.500000_building_no_ground.off  polylist_P0.300000_.off  polylist_P0.300000_building_no_ground.off  polylist_P0.300000_flame.off
resultat/: L_trou2PO.off  L_with_TUBE.off  bonL.off  bonLP0.off  bon_cube.off  bon_cubeP0.off  mesh.off  polylist_0.500000_flame.off  polylist_P0.300000_1_.off
src/: CMakeLists.txt  draw.cpp  main.cpp  main2.cpp  read_slt  read_slt.cpp  read_stl_write_xyz.cpp
src/include/: Parameters.h
stl_file/: L.stl  L_trou2.stl  L_with_TUBE_maille.stl  l_with_trou.stl  l_with_trou_2.ply
