cmake_minimum_required(VERSION 3.22)
project(kinetic VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


# add_executable(kinetic main.cpp)
# target_include_directories(kinetic PUBLIC 
#     ${CMAKE_SOURCE_DIR}/cgal/Kinetic_surface_reconstruction/include
#     ${CMAKE_SOURCE_DIR}/cgal/Installation/include
#     )

